--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "libstatgrab-sys"
 authors = [ "Adam Flott <adam@adamflott.com>" ]
 description = "Rust FFI bindings to libstatgrab"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 repository = "https://github.com/adamflott/libstatgrab-sys"
 license = "MIT OR Apache-2.0"
@@ -17,3 +17,4 @@ build = "build.rs"
 [build-dependencies]
 cc = { version = "1.0", features = ["parallel"] }
 pkg-config = "0.3"
+bindgen = "0.60"
