--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ jobs:
     name: Test Suite
     runs-on: ubuntu-latest
     steps:
+      - name: Install statgrab
+        run: sudo apt-get install -y libstatgrab
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Install Rust toolchain
