--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install statgrab
-        run: sudo apt-get install -y libstatgrab
+        run: sudo apt-get install -y libstatgrab-dev
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Install Rust toolchain
